plugins {
    id 'java'
}

allprojects {
    group = project.maven_group
    version = project.mod_version

    repositories {
        mavenCentral()
        maven {
            name = 'Fabric'
            url = 'https://maven.fabricmc.net/'
        }
        maven {
            name = 'ryanhcode'
            url = 'https://maven.ryanhcode.dev/releases'
            content {
                includeGroup 'foundry.imguimc'
            }
        }

        maven {
            name = 'meekdev'
            url = 'https://maven.meekhasto.rest'
            content {
                includeGroup 'com.meekdev'
            }
        }
    }
}

subprojects {
    apply plugin: 'java-library'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(25)
        }
    }

    tasks.withType(JavaCompile).configureEach {
        options.encoding = 'UTF-8'
        options.release = 25
    }

    tasks.withType(Test).configureEach {
        useJUnitPlatform()
    }

    dependencies {
        testImplementation 'org.junit.jupiter:junit-jupiter:5.11.3'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.11.3'
    }
}

tasks.register('checkArchitecture') {
    group = 'verification'
    description = 'Fails on forbidden imports across module boundaries (DESIGN.md 5.2, 6.4, 20.5).'

    def libraries = ['net.minecraft', 'com.mojang', 'org.spongepowered', 'foundry',
                     'com.meekdev.amnetic', 'com.meekdev.bkun', 'com.meekdev.resona',
                     'com.meekdev.box3d', 'imgui']

    def loader = ['net.fabricmc']

    def scriptLibraries = libraries

    def rules = [
        core  : libraries + loader + ['com.meekdev.moud.script', 'com.meekdev.moud.net',
                                      'com.meekdev.moud.mod'],
        script: scriptLibraries + loader + ['com.meekdev.moud.net', 'com.meekdev.moud.mod'],
        net   : libraries + loader + ['com.meekdev.moud.script', 'com.meekdev.moud.mod'],
    ]

    def modAllowed = ['adapter', 'suppress', 'transport', 'mixin',
                      'client', 'server', 'level', 'MoudMod.java']

    doLast {
        def broken = []

        rules.each { module, banned ->
            fileTree("${rootDir}/${module}/src").matching { include '**/*.java' }.each { file ->
                def where = file.absolutePath - "${rootDir}/"
                file.eachLine { line ->
                    def trimmed = line.trim()
                    if (!trimmed.startsWith('import ')) return
                    def imported = trimmed.substring(7).replace('static ', '')
                    banned.each { prefix ->
                        if (imported.startsWith(prefix + '.')) {
                            broken << "${where}: ${module} may not see ${prefix} (${imported.trim()})"
                        }
                    }
                }
            }
        }

        fileTree("${rootDir}/mod/src/main").matching { include '**/*.java' }.each { file ->
            def where = file.absolutePath - "${rootDir}/"
            if (modAllowed.any { where.contains('/mod/' + it) }) return
            file.eachLine { line ->
                def trimmed = line.trim()
                if (!trimmed.startsWith('import ')) return
                def imported = trimmed.substring(7).replace('static ', '')
                libraries.each { prefix ->
                    if (imported.startsWith(prefix + '.')) {
                        broken << "${where}: a library type outside the seams (${imported.trim()})"
                    }
                }
            }
        }

        ['core', 'script', 'net', 'mod', 'addons/revo', 'addons/java'].each { module ->
            fileTree("${rootDir}/${module}/src/main").matching { include '**/*.java' }.each { file ->
                def where = file.absolutePath - "${rootDir}/"
                if (where.contains('/moud/script/luau/')) return
                file.eachLine { line ->
                    if (line.trim().startsWith('import net.hollowcube.luau.')) {
                        broken << "${where}: only script.luau may see luau (${line.trim()})"
                    }
                }
            }
        }

        def qualified = ~/(?<!["\w.])(?:com\.meekdev|net\.minecraft|com\.mojang)\.[a-z][\w.]*\.[A-Z]\w+/
        def taken = [:].withDefault { [] }
        def nested = [:].withDefault { [] as Set }
        ['core', 'script', 'net', 'mod', 'addons/revo', 'addons/java'].each { module ->
            fileTree("${rootDir}/${module}/src/main").matching { include '**/*.java' }.each { file ->
                def names = []
                file.eachLine { line ->
                    def trimmed = line.trim()
                    if (trimmed.startsWith('import ')) {
                        names << trimmed.substring(7).replace('static ', '').replace(';', '').trim()
                    }
                }
                taken[file.absolutePath] = names
                def inner = [] as Set
                file.eachLine { line ->
                    (line =~ /\b[A-Z]\w*\.([A-Z]\w*)\b/).each { whole, simple -> inner << simple }
                }
                nested[file.absolutePath] = inner
                file.eachLine { line, number ->
                    def trimmed = line.trim()
                    if (trimmed.startsWith('import ') || trimmed.startsWith('package ')
                            || trimmed.startsWith('//') || trimmed.startsWith('*')) {
                        return
                    }
                    def hit = qualified.matcher(line)
                    if (!hit.find()) return
                    def full = hit.group()
                    def simple = full.substring(full.lastIndexOf('.') + 1)
                    if (taken[file.absolutePath].any { it != full && it.endsWith('.' + simple) }) {
                        return
                    }
                    if (nested[file.absolutePath].contains(simple)) return
                    def where = file.absolutePath - "${rootDir}/"
                    broken << "${where}:${number}: a name spelled out in full (${full})"
                }
            }
        }

        if (!broken.isEmpty()) {
            throw new GradleException("checkArchitecture failed:\n  " + broken.join('\n  '))
        }
        logger.lifecycle("checkArchitecture: clean")
    }
}

tasks.matching { it.name == 'check' }.configureEach { dependsOn 'checkArchitecture' }
